[gd_scene load_steps=12 format=2]

[ext_resource path="res://MovementGrid.gd" type="Script" id=1]
[ext_resource path="res://assets/KawaiiIcons_NoBG031.png" type="Texture" id=2]
[ext_resource path="res://assets/KawaiiIcons_NoBG034.png" type="Texture" id=3]
[ext_resource path="res://Grid.gd" type="Script" id=4]
[ext_resource path="res://assets/star_hole.png" type="Texture" id=5]
[ext_resource path="res://assets/KawaiiIcons_NoBG046.png" type="Texture" id=6]
[ext_resource path="res://assets/KawaiiIcons_NoBG003.png" type="Texture" id=7]
[ext_resource path="res://assets/KawaiiIcons_NoBG024.png" type="Texture" id=8]
[ext_resource path="res://assets/KawaiiIcons_NoBG050.png" type="Texture" id=9]

[sub_resource type="TileSet" id=1]
0/name = "KawaiiIcons_NoBG031.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32.0261, 31.8582 )

[node name="Grid" type="Node"]
script = ExtResource( 4 )

[node name="DebugTile" type="ColorRect" parent="."]
visible = false
margin_right = 32.0
margin_bottom = 32.0
color = Color( 0.752941, 0.752941, 0.752941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugPos" type="Label" parent="DebugTile"]
visible = false
margin_right = 40.0
margin_bottom = 14.0

[node name="TileGrid" type="TileMap" parent="."]
visible = false
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0 )
__meta__ = {
"_editor_description_": "Tiles pnly used for debugging, the map is the useful thing"
}

[node name="MovementGrid" type="CanvasLayer" parent="."]
layer = -1
script = ExtResource( 1 )

[node name="GridLine" type="Line2D" parent="MovementGrid"]
visible = false
width = 1.0
default_color = Color( 0.960784, 1, 0.619608, 1 )

[node name="Food" type="KinematicBody2D" parent="."]
visible = false
position = Vector2( 130.32, 24.567 )

[node name="Sprite" type="Sprite" parent="Food"]
position = Vector2( 32.0786, 31.8689 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Food"]
position = Vector2( 31.8603, 32.2441 )
shape = SubResource( 2 )

[node name="Star" type="KinematicBody2D" parent="."]
visible = false
position = Vector2( -38.1003, 41.0468 )

[node name="Sprite" type="Sprite" parent="Star"]
position = Vector2( 31.692, 32.2353 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Star"]
position = Vector2( 31.8603, 32.2441 )
shape = SubResource( 2 )

[node name="Rainbow" type="KinematicBody2D" parent="."]
visible = false
position = Vector2( -76.1662, 161.575 )

[node name="Sprite" type="Sprite" parent="Rainbow"]
position = Vector2( 32.0786, 31.8689 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rainbow"]
position = Vector2( 31.8603, 32.2441 )
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="StarSlot" type="Sprite" parent="."]
position = Vector2( -63.9815, 0 )
texture = ExtResource( 5 )
offset = Vector2( 32, 32 )
flip_h = true

[node name="ChopSlot" type="Sprite" parent="."]
position = Vector2( -68.5246, 73.2909 )
texture = ExtResource( 7 )
offset = Vector2( 32, 32 )

[node name="Exit" type="Sprite" parent="."]
position = Vector2( -79.5735, 255.455 )
texture = ExtResource( 9 )
offset = Vector2( 32, 32 )

[node name="StarTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
